# gotra

./: .env.example  .gitignore  .gitmodules  README.md  SPEC.md  STATUS.md  pyproject.toml
config/: beta_universe.json  data_sources.yml  public_claims.yml
contracts/: investment_event.schema.json
docs/: AUTONOMY_RUNBOOK.md  BT_PARALLEL_RUNNER_REPAIR_PLAN.md  FULL_ANALYST_PRODUCTION_LOOP_RUNBOOK.md  GOTRA_AUDIT_EVENT_CHAIN_HARDENING_PREREG_20260621.md  GOTRA_AUDIT_EVENT_CHAIN_HARDENING_RESULT_20260621.md  GOTRA_BASELINE_V2_EVIDENCE_FREEZE_2026-06-19.md  GOTRA_BASELINE_V2_KIMI26_INPUT_ECHO_RECOVERY_2026-06-19.md  GOTRA_BASELINE_V2_KIMI26_RESULT_2026-06-19.md  GOTRA_BASELINE_V2_NEXT_LAYER_DESIGN_2026-06-19.md  GOTRA_BASELINE_V2_THREE_ARM_PILOT_RESULT_2026-06-19.md  GOTRA_BASELINE_V2_THREE_ARM_PREREG_2026-06-18.md  GOTRA_BASELINE_V3_1_FORMAL_LITE_RESULT_20260619T211047Z.md  GOTRA_BASELINE_V3_1_FORMAL_LITE_RUN_PLAN_2026-06-20.md  GOTRA_BASELINE_V3_1_REAL_EVIDENCE_PREREG_2026-06-19.md  GOTRA_BASELINE_V3_2_EVIDENCE_FEEDBACK_PREREG_2026-06-20.md  GOTRA_BASELINE_V3_2_FORMAL_LITE_RESULT_20260620T061757Z.md  GOTRA_BASELINE_V3_2_FORMAL_LITE_RUN_PLAN_2026-06-20.md  GOTRA_BASELINE_V3_2_KIMI_TEMPERATURE_CONTRACT_RESULT_20260620T075439Z.md  GOTRA_BASELINE_V3_AUTH_RESTORE_RUNTIME_RETRY_RESULT_20260619T062922Z.md  GOTRA_BASELINE_V3_FORMAL_LITE_PREREG_2026-06-19.md  GOTRA_BASELINE_V3_FORMAL_LITE_RESULT_20260619T150047Z.md  GOTRA_BASELINE_V3_FORMAL_LITE_RUN_PLAN_20260619.md  GOTRA_BASELINE_V3_IMPL_HARDENING_REVIEW_20260619T043529Z.md  GOTRA_BASELINE_V3_IMPL_RESULT_20260619T042204Z.md  (+133 more)
(+239 files in other folders)
